Fixed a layout issue in clock

--- a/docs/css/clock.css
+++ b/docs/css/clock.css
@@ -9,8 +9,8 @@
 	gap: 1rem;
 }
 
-/* Clock has four rows so limit the card height to 21% of the table's height, and maintain the aspect ratio. */
+/* Clock has four rows so limit the card height to 20% of the table's height, and maintain the aspect ratio. */
 .pile {
-	max-height: 21cqh;
-	max-width: calc( 21cqh * 0.692 );
+	max-height: 20cqh;
+	max-width: calc( 20cqh * 0.692 );
 }
